# pyPWR

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  linter.yml  python-package.yml
PyPWR/: __init__.py  effect_size.py  power_classes.py  pwr_tests.py
src/: effect_size.py  power_classes.py  pwr_tests.py
test/: context.py  test_effect_size.py  test_pwr.py
