[project]
name = "pypwr"
version = "1.0.0"
description = "A Python package for assessing the power of multiple statiscal tests."
readme-content-type = "text/markdown"
keywords = [
    "power analysis",
    "multiple testing",
    "statistical tests",
    "hypothesis testing",
    "python package"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
authors = [
    {name = "ConorMcNamara",email = "conor.s.mcnamara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
