[project]
name = "pypwr"
version = "1.0.0"
description = "A Python package for assessing the power of multiple statistical tests."
readme = "README.md"
keywords = [
    "power analysis",
    "multiple testing",
    "statistical tests",
    "hypothesis testing",
    "python package",
    "statistics",
    "effect size"
]
authors = [
    {name = "ConorMcNamara", email = "conor.s.mcnamara@gmail.com"}
]
maintainers = [
    {name = "ConorMcNamara", email = "conor.s.mcnamara@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed"
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.4,<3.0.0",
    "scipy>=1.15.2,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "autopep8>=2.3.0",
    "pydocstringformatter>=0.7.3"
]

[project.urls]
Homepage = "https://github.com/ConorMcNamara/pyPWR"
Repository = "https://github.com/ConorMcNamara/pyPWR"
Issues = "https://github.com/ConorMcNamara/pyPWR/issues"
Documentation = "https://github.com/ConorMcNamara/pyPWR#readme"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pypwr"
version = "1.0.0"
description = "A Python package for assessing the power of multiple statistical tests."
authors = ["ConorMcNamara <conor.s.mcnamara@gmail.com>"]
packages = [{include = "PyPWR"}]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "N999"] # Unused imports in __init__.py are OK, module name PyPWR is intentional
"PyPWR/power_classes.py" = ["N801"] # Class names like pwr_2p intentionally match R's pwr library
"test/*.py" = ["N801", "N802"] # Test class and method names follow pytest conventions

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
